Fix issue where margin under date header was covering task cards when scrolling.

--- a/styles/style.css
+++ b/styles/style.css
@@ -418,7 +418,7 @@ ul.projects {
   width: 96.5%;
   margin: 0;
   margin-bottom: 3px;
-  padding: 0 1.75%;
+  padding: 20px 1.75%;
   overflow-y: auto;
 }
 
